@@ -2,6 +2,7 @@ github
 - mayhem:
   - Make updater's settings dynamic
   - Multi-line quoting
+  - New Unread Count reset keybind
   - fix remember updater's interval settings
   - fix wrong keybind input in options
   - fix time preview
